[gd_scene load_steps=7 format=3 uid="uid://ci2avjq1pux6n"]

[ext_resource type="Script" path="res://dice3d.gd" id="1_0vtop"]
[ext_resource type="PackedScene" uid="uid://bvkhxu35tnho" path="res://dice_texture.tscn" id="1_2h2hn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rqiw8"]

[sub_resource type="ViewportTexture" id="ViewportTexture_prjrj"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j2jk4"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_prjrj")
texture_filter = 0

[sub_resource type="BoxMesh" id="BoxMesh_b441a"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_j2jk4")

[node name="DiceContainer" type="Node3D"]
script = ExtResource("1_0vtop")

[node name="Dice3d" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.38419e-07, 1.73898, -0.0152788)
gravity_scale = 0.0

[node name="DiceCollision" type="CollisionShape3D" parent="Dice3d"]
shape = SubResource("BoxShape3D_rqiw8")

[node name="DiceMesh" type="MeshInstance3D" parent="Dice3d/DiceCollision"]
mesh = SubResource("BoxMesh_b441a")

[node name="RayCast3D-1" type="RayCast3D" parent="Dice3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
target_position = Vector3(0, 0, 1)

[node name="RayCast3D-2" type="RayCast3D" parent="Dice3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
target_position = Vector3(1, 0, 0)

[node name="RayCast3D-3" type="RayCast3D" parent="Dice3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
target_position = Vector3(0, 0, -1)

[node name="RayCast3D-4" type="RayCast3D" parent="Dice3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
target_position = Vector3(-1, 0, 0)

[node name="RayCast3D-5" type="RayCast3D" parent="Dice3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 1, 0)

[node name="RayCast3D-6" type="RayCast3D" parent="Dice3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
canvas_item_default_texture_filter = 0
size = Vector2i(48, 32)
render_target_update_mode = 4

[node name="DiceTexture" parent="SubViewport" instance=ExtResource("1_2h2hn")]

[connection signal="input_event" from="Dice3d" to="." method="_on_dice_3d_input_event"]
[connection signal="sleeping_state_changed" from="Dice3d" to="." method="_on_dice_3d_sleeping_state_changed"]
